@@ -1,3 +1,9 @@
+2009-03-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Insert environment now supports selections by position \begin{} and
+   \end{} around
+
+
 2009-02-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Don't react on some keybindings in case of no document is open.
